# android_dns_strolch

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/de/batram/dnsstrolch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/batram/dnsstrolch/: DNSStrolch.kt  EditFilter.kt  MainActivity.kt  TunnelVision.kt  VpnSchrubler.kt
app/src/main/java/de/batram/dnsstrolch/ui/: Filter.kt  FilterWrangler.kt  ListAdapter.kt  ListItem.kt  SettingsFragment.kt
app/src/main/res/drawable/: ic_blocked_no_filter_24dp.xml  ic_fingerprint_black_24dp.xml  ic_fingerprint_p_24dp.xml  ic_grid_on_black_24dp.xml  ic_security_black_24dp.xml  ic_settings_applications_black_24dp.xml  ic_sort_black_24dp.xml  ic_swap_calls_black_24dp.xml  ic_timer_black_24dp.xml  ic_view_headline_black_24dp.xml  listitem_background.xml  snowflake.xml
app/src/main/res/layout/: activity_main.xml  filter_edit.xml  fragment_allowed.xml  fragment_fresh.xml  fragment_ignored.xml  fragment_settings.xml  list_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml  sort_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/de/batram/dnsstrolch/: ExampleUnitTest.kt
app/src/tunnelvision/: Cargo.toml  Makefile
app/src/tunnelvision/src/: dns_actions.rs  domain_filter.rs  lib.rs  packeemon.rs  pollinator.rs
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
