[package]
name = "tunnelvision"
version = "0.1.0"
authors = ["batram <ym@batr.am>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
base64 = ""
rustls = ""
webpki = ""
libc = ""
webpki-roots = ""
dns-parser = ""
byteorder = "1.3.4"
log = ""
jni = "0.10"
state = { version = "0.2", features = ["tls"] }
state_list = { git = "https://github.com/batram/state_list" }
tld = "2.10.0"
seahash = ""

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
